starting bug fixes on mobile version of projects page

--- a/style.scss
+++ b/style.scss
@@ -519,7 +519,7 @@ nav {
   height: 250px;
 
   @include mobile {
-    height: 180px;
+    height: 200px;
   }
 
   h1 {
@@ -543,7 +543,7 @@ nav {
 
     @include mobile {
       float: right;
-      font-size: 14px;
+      font-size: 12px;
     }
   }
 }
@@ -560,7 +560,10 @@ nav {
 
   @include mobile {
     height: 100px;
+    margin-left: 10px;
     margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
